# syncy

./: Cargo.toml
syncy-client/: Cargo.toml
syncy-client/examples/: demo.rs  test_client.rs
syncy-client/src/: lib.rs  repo.rs
syncy-client/tests/: main.rs
syncy-server/: Cargo.toml
syncy-server/examples/: test_server.rs
syncy-server/src/: lib.rs  server.rs  session.rs
