[package]
name = "syncy-client"
version = "0.1.0"
edition = "2021"

[dependencies]
yrs.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures-lite.workspace = true
bytes.workspace = true
tracing.workspace = true
uuid.workspace = true

tokio-tungstenite = { version = "0.24", features = ["stream"] }
futures-sink = "0.3.30"
futures-util = "0.3.30"
dashmap = "6.1.0"

[dev-dependencies]
tempfile = "3.12"
env_logger = "0.11.5"
rand = "0.8.5"