[package]
name = "syncy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
yrs.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures-lite.workspace = true
bytes.workspace = true
tracing.workspace = true
uuid.workspace = true

actix = { version = "0.13.3", features = ["macros"] }
actix-ws = { version = "0.3", features = [] }
actix-web = { version = "4.5.1", features = [] }
actix-http = { version = "3.9", features = [] }
actix-rt = "2.9.0"
actix-web-actors = { version = "4.3" }
actix-service = "2.0"
actix-identity = "0.8"
actix-router = "0.5"
actix-session = { version = "0.10" }
actix-multipart = { version = "0.7.2", features = ["derive"] }

opendal = { version = "0.50.0", features = ["services-s3"] }
redis = { version = "0.27", features = ["aio", "async-trait", "tokio-comp", "serde", "bytes", "streams", "connection-manager"] }

[dev-dependencies]
env_logger = "0.11.5"